--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<h1>Bienvenue sur : Compostage Le Villon</h1>
+<img src="../../../assets/images/imgimmeuble.jpg" alt="Immeuble : Le Villon">
+<h3>Retrouvez sur notre site toutes les informations utiles liées à nos bacs de compostage.</h3>
