--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,8 @@
 <nav class="flex space-between center" #navBar>
   <i class="fa-solid fa-leaf"></i>
   <h3 class="flex"
-      [routerLink]="'/'">Compostage : Le Villon</h3>
+      [routerLink]="'/'">Compostage : Le Villon
+  </h3>
   <ul
     class="flex center space-around"
     [ngClass]="
