--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -150,7 +150,7 @@
   <input name="_redirect"
         type="hidden"
         id="name"
-        value="http://localhost:4200/formulaire-envoye"/>
+        value="/formulaire-envoye"/>
   <button
     [type]="checkErrors() ? 'submit' : 'button'"
     (click)="changeSubmitted()"
