--- a/src/app/pages/concept/concept.component.html
+++ b/src/app/pages/concept/concept.component.html
@@ -1,1 +1,16 @@
-<p>concept works!</p>
+<h1>Concept</h1>
+<img src="../../../assets/images/bacs/compostBack.jpg"
+     alt="Photo large de nos bacs de compost">
+<h3>Ici, on ne fait pas dans la demi-mesure.</h3>
+<p>Si vous êtes arrivé jusqu'ici, c'est que vous avez décidé de plonger les mains dans le tas, littéralement parlant ! Mais ne vous inquiétez pas, nous ne vous demanderons pas de mettre votre dignité au compost.</p>
+<p>Imaginez un monde où vos déchets deviennent de véritables trésors organiques, où les épluchures de carottes se transforment en or brun. Oui, c'est le monde merveilleux du compostage, où la pourriture devient une œuvre d'art écologique !</p>
+<img src="../../../assets/images/bacs/compostMelange.jpg"
+     alt="compost mélangé"
+     class="width">
+<p>Ici, nous vous proposons un voyage au cœur de la transformation : du résidu alimentaire banal à la richesse nourricière du sol. Vous vous sentez prêt à relever le défi ? Alors, enfilez vos bottes et préparez-vous à plonger dans l'univers palpitant du compostage !</p>
+<p>Mais attention, le compostage n'est pas seulement une question de remuer de la terre et de se mettre des épluchures sur la tête. C'est une véritable science, une alchimie délicate entre carbone et azote, entre décomposition et régénération. Nous vous guiderons à travers ce dédale de déchets.</p>
+<img src="../../../assets/images/bacs/diagonale.jpg"
+     alt="arbre au dessus de notre compost"
+     class="width">
+<p>Prêt à découvrir comment transformer votre cuisine en laboratoire de la vie ? Alors, suivez-nous dans notre quête pour sauver la planète, une épluchure à la fois !</p>
+<p>Et n'oubliez pas, la seule chose que vous enterrerez, ce sont vos préjugés sur le compostage !</p>
