--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,2 +1,47 @@
-<p>contact works!</p>
+<h1>Contact</h1>
+<p>Vous pouvez nous joindre par différents modes de contact :</p>
+<ul>
+  <li>
+    le formulaire de contact ci dessous
+  </li>
+  <li>
+    par email :
+    <a href="mailto:compostage.levillon@gmail.com" >
+      compostage.levillon&#64;gmail.com
+    </a>
+  </li>
+  <li>
+    par téléphone :
+    <ul>
+      <li>Sandrine :
+        <a href="tel:++33642759215" >
+          0642759215
+        </a>
+      </li>
+      <li>Manon :
+        <a href="tel:+33608499531" >
+          0608499531
+        </a>
+      </li>
+      <li>Evelyne :
+        <a href="tel:+33617882663" >
+          0617882663
+        </a>
+      </li>
+      <li>Guillaume :
+        <a href="tel:+33762191047" >
+          0762191047
+        </a>
+      </li>
+    </ul>
+  </li>
+</ul>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d237.47230709831666!2d4.864749010700392!3d45.74296350661894!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1711993902355!5m2!1sfr!2sfr"
+
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+</iframe>
 <app-contact-form></app-contact-form>
