--- a/src/app/pages/contact-form-send/contact-form-send.component.html
+++ b/src/app/pages/contact-form-send/contact-form-send.component.html
@@ -1,1 +1,2 @@
-<p>contact-form-send works!</p>
+<h1>Formulaire envoyé avec succès !</h1>
+<h3>L'équipe du compostage vous répondra au plus vite</h3>
