--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,7 +1,13 @@
 <form id="contactform"
-      action="https://formsubmit.io/send/compostage.levillon@gmail.com"
+      action="https://formsubmit.co/0defd2c0b85b4f4bb7d0b9a5d35691dc"
       method="POST"
       class="flex center column">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="text" name="_honey" style="display:none">
+  <input type="hidden" name="_subject" value="Nouveau Message du site internet !">
+  <input type="hidden" name="_next" value="https://compostagelevillon.netlify.app/formulaire-envoye">
+  <!-- <input name="_redirect" type="hidden" id="name" value="https://compostagelevillon.netlify.app/formulaire-envoye"/> -->
+  <!-- action="https://formsubmit.io/send/0fd9b36a-67e5-4ce5-a4f7-ba5ac7020106" -->
   <h2>Formulaire de contact</h2>
   <fieldset>
     <div class="container">
@@ -11,7 +17,7 @@
              id="nom"
              class="input"
              (keyup)="changeLastnameValue($event)">
-      <label class="label">Nom...</label>
+      <label for="nom" class="label">Nom...</label>
     </div>
     <div class="errors flex column" *ngIf="isFormClicked && hasErrors">
       <small *ngIf="lastnameValue && lastnameValue.length > 255">
@@ -37,7 +43,7 @@
               id="prenom"
               class="input"
               (keyup)="changeFirstnameValue($event)">
-      <label class="label">Prénom...</label>
+      <label for="prenom" class="label">Prénom...</label>
     </div>
     <div class="errors flex column" *ngIf="isFormClicked && hasErrors">
       <small *ngIf="firstnameValue && firstnameValue.length > 255">
@@ -62,7 +68,7 @@
             id="email"
             class="input"
             (keyup)="changeEmailValue($event)">
-      <label class="label">Email...</label>
+      <label for="email" class="label">Email...</label>
     </div>
     <div class="errors flex column" *ngIf="isFormClicked && hasErrors">
       <small *ngIf="!validateEmail()">
@@ -83,7 +89,7 @@
               id="telephone"
               class="input"
               (keyup)="changePhoneValue($event)">
-      <label class="label">Téléphone...</label>
+      <label for="telephone" class="label">Téléphone...</label>
     </div>
     <div class="errors flex column" *ngIf="isFormClicked && hasErrors">
       <small *ngIf="validatePhone()">
@@ -104,12 +110,14 @@
               name="theme"
               id="theme"
               class="input"
+              [value]="themeValue ? themeValue : ''"
               (focus)="toggleDropdown()">
-        <label class="label"> {{ themeValue }} </label>
+        <label for="theme" class="label"> {{themeValue ? '' : 'Choisir un thème...'}} </label>
       </div>
       <ul class="items-list" [ngClass]="{'dropdown-visible': isDropdownOpen}">
         <li (click)="changeThemeValue('Demande d`informations')">Demande d'informations</li>
-        <li (click)="changeThemeValue('Participation')">Participation</li>
+        <li (click)="changeThemeValue('Participation aux Projets')">Participation aux Projets</li>
+        <li (click)="changeThemeValue('Inscription Newsletter')">Inscription Newsletter</li>
         <li (click)='changeThemeValue("Autre sujets")'>Autre sujets</li>
       </ul>
   </div>
@@ -127,7 +135,7 @@
                 id="message"
                 (keyup)="changeMessageValue($event)">
       </textarea>
-      <label class="label">Message...</label>
+      <label for="message" class="label">Message...</label>
     </div>
 
     <div class="errors flex column" *ngIf="hasErrors && isFormClicked">
@@ -146,15 +154,10 @@
     </div>
   </fieldset>
   <input name="_formsubmit_id" type="text" style="display: none" />
-  <input name="_redirect"
-         type="hidden"
-         id="name"
-         value="https://compostagelevillon.netlify.app/formulaire-envoye"/>
-  <button [type]="checkErrors() ? 'submit' : 'button'"
-          (click)="changeSubmitted()"
-          class="btn-normal pointer submit" >
-    ENVOYER
-  </button>
+  <input value="ENVOYER"
+         [type]="checkErrors() ? 'submit' : 'button'"
+         (click)="changeSubmitted()"
+         class="btn-normal pointer submit">
 </form>
 
 <app-loader [booleanVisibilityInLoarder]="isLoaderVisible"></app-loader>
