--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,19 @@
 <h1>Bienvenue sur : Compostage Le Villon</h1>
+<h2 class="red">Information Importante : Changement des codes de cadenas le Jeudi 30 Mai à 18h</h2>
 <img src="../../../assets/images/bacs/diagonaleBig.jpg" alt="Immeuble : Le Villon">
 <h3>Retrouvez sur notre site toutes les informations utiles liées à nos bacs de compostage.</h3>
+<div class="event">
+  <h2>EVENEMENT A VENIR</h2>
+  <h3>Soirée de recontre, formation et récolte</h3>
+  <div>
+    <img src="../../../assets/images/extérieur.jpg" alt="photo d'un repas extérieur">
+    <h4>Le Jeudi 30 Mai à 18h</h4>
+    <p>aura lieu un moment de partage et rencontre autour de nos bacs.<br>
+      Nous pourrons échanger quelques paroles mais aussi des rafraichissements et grignotages. N'hésitez pas à y venir et/ou à amener quelque chose à partager<br><br>
+      De plus, ces festivités nous permettront d'effectuer des rappels sur les bonnes pratiques à tenir, car comme vous le savez certainement suite à notre dernier mail : certains déchets non compostables se soient glissés dans nos précieux bacs, créant une confusion botanique et une ambiance un peu "trash".<br><br>
+      Ce sera aussi l'occasion d'effectuer la récolte bien méritée de notre fameux compost, n'oubliez pas vos contenants afin de le récupérer ! <br>
+      Nous metttrons en place les nouveaux codes de cadenas à ce moment.
+    </p>
+  </div>
+  <img class="wMax" src="../../../assets/images/compost.jpg" alt="compost pris à la main">
+</div>
