--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
 <h3>Retrouvez sur notre site toutes les informations utiles liées à nos bacs de compostage.</h3>
 <div class="event">
   <h2>EVENEMENT A VENIR</h2>
-  <h3>Soirée de recontre, formation et récolte</h3>
+  <h3>Soirée de rencontre, formation et récolte</h3>
   <div>
     <img src="../../../assets/images/extérieur.jpg" alt="photo d'un repas extérieur">
     <h4>Le Jeudi 30 Mai à 18h</h4>
