--- a/src/app/pages/rules/rules.component.html
+++ b/src/app/pages/rules/rules.component.html
@@ -1,4 +1,14 @@
 <h1>Les Bonnes Pratiques</h1>
+
+<p>Si vous souhaitez en savoir plus, ci dessous une PDF pour vous guider.</p>
+<a class="flex center"
+   href="../assets/Guide_compostage.pdf"
+   download="Guide_compostage.pdf">
+   <img src="../../../assets/images/guide-compostage-cover.png" alt="Photo de couverture du Guide de compostage version PDF">
+  <i class="fa-solid fa-file-pdf"></i>
+  <p>Guide du Compostage (PDF)</p>
+</a>
+
 <div class="rules-cards flex space-between">
   <button *ngFor="let rule of differentRules"
           class="btn-normal"
