add Inscription Formation in Contact

--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -114,10 +114,11 @@
       </div>
       <ul class="items-list" [ngClass]="{'dropdown-visible': isDropdownOpen}">
         <li (click)="changeThemeValue('Demande d`informations')">Demande d'informations</li>
+        <li (click)="changeThemeValue('Inscription pour une formation')">Inscription pour une formation</li>
         <li (click)="changeThemeValue('Participation aux Projets')">Participation aux Projets</li>
         <li (click)="changeThemeValue('Inscription Newsletter')">Inscription Newsletter</li>
         <li (click)="changeThemeValue('Désinscription Newsletter')">Désinscription Newsletter</li>
-        <li (click)='changeThemeValue("Autre sujets")'>Autre sujets</li>
+        <li (click)='changeThemeValue("Autre sujets")'>Autre sujets...</li>
       </ul>
   </div>
 
