--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,9 @@
 <h1>Bienvenue sur : Compostage Le Villon</h1>
-<h2 class="red">Information Importante : Changement des codes de cadenas le Jeudi 30 Mai à 18h</h2>
+<h2 class="red">Information Importante : Changement de code des cadenas des bacs 1 et 2 à eu lieu le Jeudi 30 Mai à 18h</h2>
+<h4>N'hésitez pas à nous contacter via le <span [routerLink]="'contact'">formulaire de contact</span> pour plus d'informations.</h4>
 <img src="../../../assets/images/bacs/diagonaleBig.jpg" alt="Immeuble : Le Villon">
 <h3>Retrouvez sur notre site toutes les informations utiles liées à nos bacs de compostage.</h3>
-<div class="event">
+<!-- <div class="event">
   <h2>EVENEMENT A VENIR</h2>
   <h3>Soirée de rencontre, formation et récolte</h3>
   <div>
@@ -16,4 +17,4 @@
     </p>
   </div>
   <img class="wMax" src="../../../assets/images/compost.jpg" alt="compost pris à la main">
-</div>
+</div> -->
