ajout du message de fermeture de bac 1 pour broyat

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <h1>Bienvenue sur : Compostage Le Villon</h1>
-<h2 class="red">Information Importante : Changement de code des cadenas des bacs 1 et 2 à eu lieu le Jeudi 30 Mai à 18h</h2>
+<h2 class="red">Information Importante : Bac n°1 fermé en attendant une livraison de broyat.</h2>
+<h3>Un changement de code des cadenas des bacs 1 et 2 à eu lieu le Jeudi 30 Mai à 18h</h3>
+<!-- <h2 class="red">Information Importante : Changement de code des cadenas des bacs 1 et 2 à eu lieu le Jeudi 30 Mai à 18h</h2> -->
 <h4>N'hésitez pas à nous contacter via le <span [routerLink]="'contact'">formulaire de contact</span> pour plus d'informations.</h4>
 <img src="../../../assets/images/bacs/diagonaleBig.jpg" alt="Immeuble : Le Villon">
 <h3>Retrouvez sur notre site toutes les informations utiles liées à nos bacs de compostage.</h3>
